fixed styling on submission selector to scroll instead of overflowing

--- a/src/renderer/src/assets/App.css
+++ b/src/renderer/src/assets/App.css
@@ -53,6 +53,8 @@ li.active > button {
     border-radius: 5px;
     width: 20%;
     height: fit-content;
+    max-height: 100%;
+    overflow-y: scroll;
 }
 #submissions-selector ul {
     list-style: none;
@@ -65,7 +67,7 @@ li.active > button {
 #submissions-selector ul > li > button {
     width: 100%;
     border-radius: 0;
-    padding: 1rem;
+    padding: 0.5rem;
     text-align: left;
 }
 
